# agents_langGraph_V0

./: langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07_structured_output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  12-parallization.ipynb  13-random.ipynb
src/agents/: code_review.py  evaluator.py  main.py  orchestrator.py  rag.py  react.py  simple.py
src/agents/support/: agent.py
src/agents/support/nodes/booking/: node.py  tools.py
src/agents/support/nodes/conversation/: node.py  tools.py
src/agents/support/nodes/extractor/: node.py  promt.py
src/agents/support/routes/intent/: route.py
