[project]
name = "course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.0.4",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langgraph-cli[inmem]>=0.4.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
